--- a/spiceBRT.ipynb
+++ b/spiceBRT.ipynb
@@ -473,9 +473,9 @@
    "outputs": [],
    "source": [
     "import platform\n",
-    "%alias lts /Applications/LTspice.app/Contents/MacOS/LTspice -ascii -b\n",
+    "%alias lts ""/Applications/LTspice.app/Contents/MacOS/LTspice -ascii"" -b\n",
     "if platform.system() == \"Windows\":\n",
-    "    %alias lts C:\\Program Files\\LTC\\LTspiceXVII\\XVIIx64.exe -ascii -b"
+    "    %alias lts ""C:\\Program Files\\LTC\\LTspiceXVII\\XVIIx64.exe"" -ascii -b"
    ]
   },
   {
